--- a/index.html
+++ b/index.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Personal profile page</title>
-    </head>
-    <body>
-        <h1>About me</h1>
-        <p>
-            I am a student. I've been in love with technology for some time now
-            and i stated seeeing i have staretd gaining interest in software enginneering 
-            and decided i will start working on it. I'm proud of the progress i'm making. 
-        </p>
-        <hr>
-        <h2>interest and Hobbies</h2>
-        <p>
-            I've always have alot of interest in technology and maybe the automotive industry, cars
-            to be specific. I like how the technology is changing and its revolution, it shows
-            how creative the tech guys have been over the years which makes me nervous to be part of them.              
-        </p>
-    </body>
+
+<head>
+    <title>Personal profile page</title>
+</head>
+
+<body>
+    <h1>About me</h1>
+    <p>
+        I am a student. I've been in love with technology for some time now
+        and i stated seeeing i have staretd gaining interest in software enginneering
+        and decided i will start working on it. I'm proud of the progress i'm making.
+    </p>
+    <hr>
+    <h2>interest and Hobbies</h2>
+    <p>
+        I've always have alot of interest in technology and maybe the automotive industry, cars
+        to be specific. I like how the technology is changing and its revolution, it shows
+        how creative the tech guys have been over the years which makes me nervous to be part of them.
+    </p>
+    <h2>
+        My Twitter Account
+    </h2>
+        <a href="https://twitter.com/home"
+        target="_blank">Limk to my twitter account
+    </a>
+    <h2>
+        My Gmail account
+    </h2>
+    <a href="https://mail.google.com/mail/u/0/#inbox"
+    target="_blank">link to my gmail account 
+</a>
+<img src="_MG_9914.JPG" alt="My photo">
+</body>
 </html>
