--- a/responsive/responsive.html
+++ b/responsive/responsive.html
@@ -12,7 +12,7 @@
             <a href="responsive.html" class="header-brand">ShoeSale</a>
             <nav>
                 <ul>
-                 <li><a href="portfilo.html">Portfolio</a></li>
+                 <li><a href="portfolio.html">Portfolio</a></li>
                  <li><a href="About.html">About us</a></li>
                  <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -21,13 +21,27 @@
 
         <main>
             <section class="responsive-banner">
+                <div class=" vertical-center">
                 <h2>
-                   <br> Mobile shoe seller  
+                   <br> ShoeHub Galore.  
                 </h2>
                 <h1>
-                    We distribute quality shoes <br> and around the city  for a small delivery price.
+                    Here at ShoeHub Galore, we value our customers. <br> We have quality shoes and we deliver them nation wide nation wide
                 </h1>
+                </div>
             </section>
+            <section class="index-links">
+                <div class="index-boxlink-rectangle ">
+                    <h3>MensShoe</h3>
+                </div>
+                <div class="index-boxlink-rectangle">
+                    <h3>LadiesShoe</h3>
+                </div>
+                <div class="index-boxlink-square">
+                    <h3>Whatsapp</h3>
+                </div>
+            </section>
+
         </main>
 
 
