--- a/responsive/responsive.html
+++ b/responsive/responsive.html
@@ -31,15 +31,21 @@
                 </div>
             </section>
             <section class="index-links">
+                <a href="cases.html">
                 <div class="index-boxlink-rectangle ">
                     <h3>MensShoe</h3>
                 </div>
+                </a>
+                <a href="cases.html">
                 <div class="index-boxlink-rectangle">
                     <h3>LadiesShoe</h3>
                 </div>
+                </a>
+                <a href="cases.html">
                 <div class="index-boxlink-square">
                     <h3>Whatsapp</h3>
                 </div>
+                </a>
             </section>
 
         </main>
